[gd_scene format=3 uid="uid://bv8gx3r4k5lna"]

[ext_resource type="Script" path="res://scripts/mask_inventory.gd" id="1_mask_inv"]

[node name="MaskInventory" type="CanvasLayer"]
script = ExtResource("1_mask_inv")

[node name="CarouselContainer" type="Control" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -160.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="PreviousMask" type="TextureRect" parent="CarouselContainer"]
layout_mode = 0
offset_left = 10.0
offset_top = 35.0
offset_right = 70.0
offset_bottom = 95.0
expand_mode = 1
stretch_mode = 5

[node name="NextMask" type="TextureRect" parent="CarouselContainer"]
layout_mode = 0
offset_left = 165.0
offset_top = 35.0
offset_right = 225.0
offset_bottom = 95.0
expand_mode = 1
stretch_mode = 5

[node name="CurrentMask" type="TextureRect" parent="CarouselContainer"]
z_index = 1
layout_mode = 0
offset_left = 50.0
offset_top = 10.0
offset_right = 145.0
offset_bottom = 90.0
expand_mode = 1
stretch_mode = 5
scale = Vector2(1.5, 1.5)
